# Singularity

./: .gitignore  Cargo.toml  README.md  build.rs
src/: analysis.rs  app.rs  asar_ripper.rs  deobfuscator.rs  detect_type_file.rs  disassemble.rs  export.rs  extractor.rs  heuristic_decryptor.rs  js_deobfuscator.rs  js_sandbox.rs  js_sandbox_ui.rs  layered_analysis.rs  link_decryptor.rs  log.rs  main.rs  misc_tools.rs  online_scanner.rs  projects.rs  secrets.rs  signature_engine.rs  tools_manager.rs  update_rules.rs
src/malware/: decrypt_generic.rs  mod.rs
src/malware/stealer/: deobfuscator.rs  mod.rs
